modified:   SAMCL/GPUSparcDecomposer.cpp 	modified:   Scheduler/Makefile 	deleted:    Scheduler/Sample 	deleted:    Scheduler/Sample.c 	deleted:    Scheduler/Scheduler 	modified:   Scheduler/Scheduler.cpp 	deleted:    Scheduler/Scheduler2 	deleted:    Scheduler/Scheduler2.cpp

--- a/Scheduler/Makefile
+++ b/Scheduler/Makefile
@@ -1,13 +1,7 @@
-all: Scheduler Scheduler2 Sample
+all: Scheduler
 
 Scheduler: Scheduler.cpp
 	g++ -O3 -o Scheduler Scheduler.cpp -I/usr/local/cuda/include -lrt -lpthread -lc -lOpenCL
 
-Scheduler2: Scheduler2.cpp
-	g++ -O3 -o Scheduler2 Scheduler2.cpp -I/usr/local/cuda/include -lrt -lpthread -lc -lOpenCL
-
-Sample: Sample.c
-	gcc -O3 -o Sample Sample.c -lrt -lc
-
 clean:
-	rm Sample Scheduler
+	rm Scheduler
